--- a/src/styles/daily.module.css
+++ b/src/styles/daily.module.css
@@ -21,3 +21,43 @@
     font-size: 1.5em;
     color: rgb(152, 120, 177);
   }
+
+  .deleteBtn {
+    position: absolute;
+    top: 25%;
+    right: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  .deleteBtn > i{
+    color: #5c0bc5;
+  }
+  
+  .deleteBtn:hover {
+    animation: vibrate 0.5s linear infinite;
+  }
+  @keyframes vibrate {
+    0% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(-2px) rotate(1deg);
+    }
+    50% {
+      transform: translateX(2px) rotate(-1deg);
+    }
+    75% {
+      transform: translateX(-2px) rotate(1deg);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
