--- a/src/styles/options.module.css
+++ b/src/styles/options.module.css
@@ -3,7 +3,7 @@
     height: 10%;
     background: #d2b7f6;
     margin-bottom: 2%;
-    border-radius: 8%;
+    border-radius: 8px;
 }
 
 .selectBtn {
@@ -15,6 +15,8 @@
     margin:0 0.3em 0.9em 0.3em;
     background: #84a1ae;
   }
+
+  
 
   i {
     font-size: 1.5em;
